Bump Bazel to 7.5.0 and Java to 21
Update builder images from Bazel 6.5.0 + Java 11 to Bazel 7.5.0 +
Java 21, required by rules_img v0.3.9. Add --add-opens workaround
for swagger2markup-cli compatibility with Java 21.

Signed-off-by: Vamsi Krishna Siddu <vamsikrishna.siddu@ibm.com>